my changes in upstream'd files

--- a/industry/hw2/rf_vs_gb.ipynb
+++ b/industry/hw2/rf_vs_gb.ipynb
@@ -24,7 +24,8 @@
     "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import xgboost as xgb"
+    "import xgboost as xgb\n",
+    "import json"
    ]
   },
   {
@@ -61,9 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "bioresponce = pd.read_csv('../seminar1/bioresponse.csv', header=0, sep=',')"
@@ -81,9 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "bioresponce_target = bioresponce.Activity.values"
@@ -92,9 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "bioresponce_data = bioresponce.iloc[:, 1:]"
@@ -250,22 +245,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "parameters = {'nthread':[1], #when use hyperthread, xgboost may become slower\n",
-    "              'objective':['binary:logistic'],\n",
-    "              'learning_rate': [0.01], #so called `eta` value\n",
-    "              'max_depth': [4],\n",
+    "parameters = {'learning_rate': [0.035, 0.04], #so called `eta` value\n",
+    "              'max_depth': [6],\n",
     "              'min_child_weight': [1],\n",
-    "              'silent': [1],\n",
-    "              'subsample': [0.8],\n",
-    "              'colsample_bytree': [0.7],\n",
-    "              'n_estimators': [100], #number of trees, change it to 1000 for better results\n",
-    "              'missing':[-999],\n",
-    "              'seed': [1337]}"
+    "              'subsample': [1.],\n",
+    "              'colsample_bytree': [1.],\n",
+    "              'colsample_bylevel': [1.],\n",
+    "              'n_estimators': [200,220],\n",
+    "              'seed': [42]\n",
+    "             }"
    ]
   },
   {
@@ -275,16 +266,18 @@
    "outputs": [],
    "source": [
     "xgb_model = xgb.XGBClassifier()\n",
-    "clf = model_selection.GridSearchCV(xgb_model, parameters, n_jobs=2, \n",
+    "clf = model_selection.GridSearchCV(xgb_model, parameters, n_jobs=1, \n",
     "                   cv=model_selection.StratifiedKFold(n_splits=4, shuffle=True), \n",
     "                   scoring='accuracy',\n",
-    "                   verbose=2, refit=True)"
+    "                   verbose=4, refit=True)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "clf.fit(X=bioresponce_data, y=bioresponce_target)"
@@ -296,7 +289,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_selection.cross_val_score(cv=3, X=bioresponce_data, y=bioresponce_target, estimator=clf.best_estimator_)"
+    "clf.best_estimator_.get_xgb_params()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.mean(model_selection.cross_val_score(cv=3, X=bioresponce_data, y=bioresponce_target, estimator=clf.best_estimator_))"
    ]
   },
   {
@@ -330,15 +332,15 @@
     "    raise Exception(\"Timed out!\")\n",
     "\n",
     "def estimate_params(params):\n",
-    "    signal.signal(signal.SIGALRM, signal_handler)\n",
-    "    signal.alarm(60)\n",
+    "    #signal.signal(signal.SIGALRM, signal_handler)\n",
+    "    #signal.alarm(60)\n",
     "    estimator = xgb.XGBClassifier(**params)\n",
     "    try:\n",
     "        score = np.mean(model_selection.cross_val_score(\n",
     "            estimator, bioresponce_data, bioresponce_target,\n",
     "            scoring = 'accuracy', cv = 3\n",
     "        ))\n",
-    "    except (Exception, msg):\n",
+    "    except (Exception):\n",
     "        score = None\n",
     "    \n",
     "    return score"
@@ -365,21 +367,84 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print estimate_params({\n",
-    "    'learning_rate': 0.1, \n",
-    "    'max_depth': 5, \n",
-    "    'n_estimators': 100000, \n",
+    "print(estimate_params({\n",
+    "    'learning_rate': 0.049, \n",
+    "    'max_depth': 6, \n",
+    "    'n_estimators': 225, \n",
     "    'min_child_weight': 3,\n",
-    "    'seed': 42\n",
-    "})"
+    "    'seed': 42,\n",
+    "    'colsample_bylevel': 1.0,\n",
+    "}))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f = open('./checkers/xgb_params.json', 'w')\n",
+    "f.write(json.dumps(obj={\n",
+    "    'learning_rate': 0.049, \n",
+    "    'max_depth': 6, \n",
+    "    'n_estimators': 225, \n",
+    "    'min_child_weight': 3,\n",
+    "    'seed': 42,\n",
+    "    'colsample_bylevel': 1.0,\n",
+    "}))\n",
+    "f.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Library/Frameworks/Python.framework/Versions/3.6/lib/python3.6/site-packages/sklearn/cross_validation.py:41: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. Also note that the interface of the new CV iterators are different from that of this module. This module will be removed in 0.20.\n",
+      "  \"This module will be removed in 0.20.\", DeprecationWarning)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import checkers.xgboost_params_checker as checkers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/marusy/Programming/data_mining_in_action_2017/industry/hw2/checkers\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.7957861977084999"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(checkers.SCRIPT_DIR)\n",
+    "checkers.Checker().check('./checkers/xgb_params.json')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -401,7 +466,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
